--- a/Factura.glade
+++ b/Factura.glade
@@ -37,7 +37,7 @@
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkFrame">
+              <object class="GtkFrame" id="frame">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label_xalign">0</property>
@@ -172,7 +172,7 @@
                                 <property name="left_padding">12</property>
                                 <property name="right_padding">10</property>
                                 <child>
-                                  <object class="GtkBox">
+                                  <object class="GtkBox" id="productos">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="orientation">vertical</property>
